[tool.poetry]
packages = [
 { include = "teleport_core" },
 { include = "xontrib" }
]
name = "xontrib-teleport"
version = "0.1.1a"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xonsh = "^0.18.4"
pydantic = "^2.9.2"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.scripts]
tp="xontrib.teleport:_main_wrapper"

[tools.poetry.plugins."xonsh.xontribs"]
teleport="xontrib.teleport"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"